--- a/servers.yml
+++ b/servers.yml
@@ -57,7 +57,6 @@ Resources:
           cd /var/www/html
           echo "it works! Udagram, Udacity" > index.html
       ImageId: ami-0149b2da6ceec4bb0
-      KeyName: VocareumKey2
       SecurityGroups:
       - Ref: WebServerSecGroup
       InstanceType: t3.medium
@@ -121,3 +120,8 @@ Resources:
       VpcId: 
         Fn::ImportValue:
           Fn::Sub: "${EnvironmentName}-VPCID"
+Outputs: 
+    LOADBALANCER: 
+        Description: Load balancer public
+        Value: 
+          Fn::Join: ["", ["http://", !GetAtt WebAppLB.DNSName]]
